API接口兼容问题